--- a/.github/workflows/validate.yml
+++ b/.github/workflows/validate.yml
@@ -8,6 +8,12 @@ jobs:
   validate:
     runs-on: ubuntu-latest
     steps:
+      - name: Collect workflow performance data
+        uses: catchpoint/workflow-telemetry-action@v2
+        with:
+          comment_on_pr: false
+          theme: dark
+
       - name: Checkout
         uses: actions/checkout@v4
 
